fix quicksearch results being hidden by navigation

--- a/css/base_structure.less
+++ b/css/base_structure.less
@@ -79,6 +79,10 @@
         }
     }
 
+    #qsearch__out {
+        z-index: 205; // put search-results above content, navigation and even mobile menu
+    }
+
     .qc-output {
         z-index: 1; // put qc-output above meta-box
     }
